--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Eventbrite</title>
+    <title>EventBrite</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +11,44 @@
   </head>
 
   <body>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" href="#">EventBrite Corporation</a>
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Accueil</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Organise ton truc</a>
+    </li>
+    <!-- Dropdown -->
+    <% if user_signed_in? %>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        Mon profil
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Mon profil</a>
+        <a class="dropdown-item" href="/users/sign_out">Se déconnecter</a>
+      </div>
+    </li>
+      <% else %>
+      <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        Se connecter / S'inscrire
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="/users/sign_in">Se connecter</a>
+        <a class="dropdown-item" href="/users/sign_up">S'inscrire</a>
+      </div>
+    </li>
+      <% end %>
+
+  </ul>
+</nav>
+
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
