--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
         <div class="form-group">
           <%= f.label :password %>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <em>(<%= @minimum_password_length %> caractères minimums)</em>
           <% end %><br />
           <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
         </div>
@@ -23,8 +23,10 @@
         <div class="actions mt-5">
           <%= f.submit "Sign up", class: "btn btn-lg btn-primary btn-block" %>
         </div>
-      <% end %>
+        <% end %>
       <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
+
+  
