--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,15 @@
   <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">EventBrite Corporation</a>
+  <a class="navbar-brand" href="/">EventBrite Corporation</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">Accueil</a>
+      <a class="nav-link" href="/">Accueil</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Organise ton truc</a>
+      <a class="nav-link" href="/event/new">Organise ton truc</a>
     </li>
     <!-- Dropdown -->
     <% if user_signed_in? %>
@@ -30,8 +30,8 @@
         Mon profil
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Mon profil</a>
-        <a class="dropdown-item" href="/users/sign_out">Se déconnecter</a>
+        <a class="dropdown-item" href="/user/:id">Mon profil</a>
+      <%= link_to 'Se deconnecter', destroy_user_session_path, :method => :delete,data: {confirm:"Vraiment ?"} ,:class => "dropdown-item"%>
       </div>
     </li>
       <% else %>
